@@ -1,19 +1,19 @@
 <rules>
 	<rule	Name="EmptyDestructorRule" 
 		Type="Gendarme.Rules.Performance.EmptyDestructorRule, Gendarme.Rules.Performance, Version=@VERSION@, Culture=neutral, PublicKeyToken=null"
-		Uri="http://www.mono-project.com/Gendarme" >
+		Uri="http://www.mono-project.com/Gendarme#EmptyDestructorRule" >
 		<problem>The type '{0}' has an empty destructor (or Finalize method).</problem>
 		<solution>Remove the empty destructor (or Finalize method) from the class.</solution>
 	</rule>
 	<rule	Name="IDisposableWithDestructorWithoutSuppressFinalizeRule" 
 		Type="Gendarme.Rules.Performance.IDisposableWithDestructorWithoutSuppressFinalizeRule, Gendarme.Rules.Performance, Version=@VERSION@, Culture=neutral, PublicKeyToken=null"
-		Uri="http://www.mono-project.com/Gendarme" >
+		Uri="http://www.mono-project.com/Gendarme#IDisposableWithDestructorWithoutSuppressFinalizeRule" >
 		<problem>The type '{0}' has a destructor and implements IDisposable. However it doesn't call System.GC.SuppressFinalize inside it's Dispose method.</problem>
 		<solution>Add a call to GC.SuppressFinalize inside your Dispose method.</solution>
 	</rule>
 	<rule	Name="UseStringEmptyRule" 
 		Type="Gendarme.Rules.Performance.UseStringEmptyRule, Gendarme.Rules.Performance, Version=@VERSION@, Culture=neutral, PublicKeyToken=null"
-		Uri="http://www.mono-project.com/Gendarme" >
+		Uri="http://www.mono-project.com/Gendarme#UseStringEmptyRule" >
 		<problem>The method '{0}' use literal "" instead of String.Empty.</problem>
 		<solution>Change the empty string for String.Empty.</solution>
 	</rule>
